--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,6 +17,7 @@
 
 <ImageView android:layout_height="wrap_content"
 android:layout_width="wrap_content"
-android:id="@+id/imageView">
+android:layout_gravity="center_horizontal"
+android:id="@+id/imageView" android:src="@drawable/images">
 </ImageView>
 </LinearLayout>
